# 2048-and-AI

./: CMakeLists.txt  README.md  backupCmake.txt  brain.cpp  brain.h  main.cpp  myFunctions.cpp  myFunctions.h  notes.txt  value.cpp  value.h
AI/: CMakeLists.txt
AI/src/: NN.cpp  NN.h  brain.cpp  brain.h  main.cpp  runme  value.cpp  value.h
Engine/: CMakeLists.txt  backupCMAKE.txt
Engine/src/: NOTES.txt  game.cpp  main.cpp  myFunctions.cpp  myFunctions.h  nn.cpp  nn.h  value.cpp  value.h
NN/: CMakeLists.txt
NN/src/: game.h  main.cpp  nn.cpp  nn.h  parse.h  value.cpp
New/src/: game.cpp  main.cpp  nn.cpp  nn.h
Training_data/: CMakeLists.txt
Training_data/src/: game.cpp  main.cpp  my_funcs.cpp  my_funcs.h  parse.cpp  parser.py
src/: main.cpp
